fix: Fix popup not centered

--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -1,9 +1,9 @@
 .content {
-  display: flex;
-  flex-direction: column;
   max-width: 880px;
   width: 100%;
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media screen and (max-width: 960px) {
