--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,7 +2,6 @@
   max-width: 880px;
   width: 100%;
   min-height: 56px;
-  margin: auto;
   padding-top: 45px;
   border-bottom: 1px solid #545454;
 }
