--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
   display: flex;
   flex-direction: column;
-  font-family: "Inter", sans-serif;
+  align-items: center;
+  font-family: 'Inter', sans-serif;
 }
