--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,5 +1,7 @@
 .popup {
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,5 +10,5 @@
   z-index: 3;
   visibility: hidden;
   opacity: 0;
-  transition: opacity .3s, visibility .3s;
+  transition: opacity 0.3s, visibility 0.3s;
 }
